# cop3530-project-3

./: README.md  justfile
backend/: CMakeLists.txt  main.cpp
backend/include/: crow_all.h
backend/src/: lib.cpp  lib.h  main.cpp
backend/test/: test.cpp
frontend/: index.html  package.json
frontend/src/: App.tsx  Graph.tsx
